# peft

./: .coverage  .gitignore  .gitmodules  .pre-commit-config.yaml  =3  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LLM adaptors copy.ipynb  LLM adaptors.ipynb  Makefile  PR_DESCRIPTION.md  README.md  SECURITY.md  adaptors_utils_new.py  boft_controlnet.md  boft_dreambooth.md  diag_training.py  generate_ia3_config.py  guide.md  pyproject.toml  replace_unilora_prefix_3files.py  requirements.txt  scratch.py  sd21_text_inv.pt  setup.cfg  setup.py  test.py  test_boft.py  test_res.out  tmp.md  tmp.out  uilinlora_training.py  vera.py
.ai/: AGENTS.md
.github/: dependabot.yml  zizmor.yml
.github/ISSUE_TEMPLATE/: bug-report.yml  feature-request.yml
.github/workflows/: build_docker_images.yml  build_documentation.yml  build_pr_documentation.yml  delete_doc_comment.yml  deploy_method_comparison_app.yml  deploy_method_explorer_app.yml  deploy_peft_shop_app.yml  integrations_tests.yml  nightly-bnb.yml  nightly.yml  stale.yml  test-docker-build.yml  test.yml  testing-combined-coverage.yml  tests-main.yml  tests.yml  torch_compile_tests.yml  trufflehog.yml  upload_pr_documentation.yml  zizmor.yaml
.ruff_cache/0.14.11/: 1101586520008042645  127149320687528030  1481962185205876505  2065854106623113065  2353291801942401400  2409097439220728155  2484119585959034873  (+19 more)
PyTorch-Wavelet-Toolbox-Custom/: .bumpversion.cfg  .flake8  .gitignore  .readthedocs.yml  CITATION.bib  CONTRIBUTING.md  LICENSE  README.rst  noxfile.py  pytest.ini  setup.cfg  setup.py
PyTorch-Wavelet-Toolbox-Custom/docs/: conf.py  examples.rst  index.rst  intro.rst  intro_cwt.rst  literature.bib  ptwt.rst  requirements.txt
PyTorch-Wavelet-Toolbox-Custom/docs/figures/: convert.sh
PyTorch-Wavelet-Toolbox-Custom/docs/logo/: plot_shannon.py
PyTorch-Wavelet-Toolbox-Custom/examples/continuous_signal_analysis/: cwt_chirp_analysis.py  readme.md
PyTorch-Wavelet-Toolbox-Custom/examples/deepfake_analysis/: README.md  packet_plot.py
PyTorch-Wavelet-Toolbox-Custom/examples/network_compression/: mnist_compression.py  readme.md  wavelet_linear.py
PyTorch-Wavelet-Toolbox-Custom/examples/speed_tests/: readme.md  run_all.sh  timeitconv_1d.py  timeitconv_1dmat.py  timeitconv_2d.py  timeitconv_2d_separable.py  timeitconv_2dmat.py  timeitconv_3d.py  timeitcwt_1d.py
PyTorch-Wavelet-Toolbox-Custom/examples/wavelet_packet_chirp_analysis/: chirp_analysis.py  readme.md
PyTorch-Wavelet-Toolbox-Custom/src/ptwt/: __init__.py  _util.py  constants.py  continuous_transform.py  conv_transform.py  conv_transform_2.py  conv_transform_3.py  matmul_transform.py  matmul_transform_2.py  matmul_transform_3.py  packets.py  separable_conv_transform.py  sparse_math.py  stationary_transform.py  version.py  wavelets_learnable.py
PyTorch-Wavelet-Toolbox-Custom/tests/: __init__.py  _mackey_glass.py  test_convolution_fwt.py  test_convolution_fwt_3.py  test_cwt.py  test_jit.py  test_matrix_fwt.py  test_matrix_fwt_2.py  test_matrix_fwt_3.py  test_packets.py  test_separable_conv_fwt.py  test_sparse_math.py  test_swt.py  test_util.py  test_wavelet.py
Zmybenchmarks/: bone.ipynb  bone.py  bone_benchmarks.ipynb  lora_benchmark.py  lora_benchmarks.ipynb  lora_fa.py  lora_fa_benchmarks.ipynb
alt/: base.py  construction.py  ia3.py  lora.py  test_alt.py  wrapper.py
claude_tutorials/: README.md  core_apis_summary.md
diag_adapter/: README.md  adapter_config.json  adapter_model.safetensors  special_tokens_map.json  tokenizer.json  tokenizer_config.json
docker/: README.md
docs/: Makefile  README.md  _toctree.yml  adadorra_implementation_notes.md  index.mdx  install.mdx  quicktour.mdx
examples/: PET_LoRA_LayoutLMForTokenClassification_on_FUNSD.ipynb  README.md  env.yaml  experiments_SA_kappatune_peft.py  memory_record_moreh.sh  multiple_adapters.py  pet_lora_seq2seq.ipynb  pet_lora_seq2seq_accelerate_ds_zero3_offload.py  pet_lora_seq2seq_accelerate_fsdp.py  pet_prefix_tuning_seq2seq.ipynb  production_lora_finetuning.py  requirement.txt  requirements.txt  setup.py
lihanzuo_scripts/: deepspeed_config_stage3.json  qwen2_custom.py  sft_tuning.py  tune_bottleneck.sh
method_comparison/: README.md  app.py  app_embed.py  config.py  demo-requirements.txt  evaluation.py  generate_sample.py  method_configs.yaml  metric_results.json  processing.py  requirements-app.txt  sanitizer.py  space.yaml  test_app.py  test_comparison.py  test_sanitizer.py
notebooks/: roberta base uilinlora.ipynb  roberta base vera.ipynb  tinyllama uilinlora.ipynb  tinyllama vera.ipynb  uilinlora_robertabase_training.py  uilinlora_tinyllama_training.py
odir/: index.json
outputs/: emissions.csv
peft-venv/: pyvenv.cfg
posters/: .$Untitled Diagram.drawio.dtmp  Untitled Diagram.drawio
results_glue/: mrpc_roberta-base_lr_1e-03_seed_42.json
scripts/: benchmark_dora_kernel.py  bump_action_versions.py  check_doc_coverage.py  ci_clean_cache.py  convert-bone-to-miss.py  evaluate-lora-conversion.py  generate_method_capabilities.py  launch_accelerate.py  launch_notebook_mp.py  log_reports.py  run_glue.py  smoke_test.py  stale.py  train_memory.py
src/: pet.py  prompt_learning_legacy.py
tests/: CPT_test.py  __init__.py  conftest.py  riemannian_test.py  run_compiled_diffusion_model_hotswap.py  run_compiled_model_hotswap.py  test_adalora_conv2d_transpose.py  test_adalora_dora.py  test_adamss_asa.py  test_adaption_prompt.py  test_arrow.py  test_auto.py  test_autocast_torchcompatibility_lora.py  test_bdlora.py  test_bias_lora_only_save.py  test_boft.py  test_bufferdict.py  test_cartridge.py  test_common_gpu.py  test_config.py  test_cpt.py  test_custom_kwargs.py  test_custom_models.py  test_custom_tokens.py  test_decoder_models.py  test_deft.py  test_delete_adapter_container_registration.py  test_delora.py  test_dora_bf16_zero_rows.py  test_encoder_decoder_models.py  test_ewora.py  test_failing.py  test_feature_extraction_models.py  test_fera.py  test_frod.py  test_get_base_model_state_dict.py  test_glora.py  test_gptqmodel.py  test_gpu_examples.py  test_gralora.py  (+77 more)
utils/: style_doc.py
(+2339 files in other folders)
