# Release checklist
# 1. Change the version in __init__.py and pyproject.toml to the release version, e.g. from "0.6.1.dev0" to "0.7.0"
# 2. Check if there are any deprecations that need to be addressed for this release by searching for "# TODO" in the code
# 3. Commit these changes with the message: "Release: VERSION", create a PR and merge it.
# 4. Add a tag in git to mark the release: "git tag -a v<VERSION> -m 'Adds tag <VERSION> for pypi' "
#    Push the tag to git:
#      git push --tags origin main
#    It is necessary to work on the original repository, not on a fork.
# 5. Run the following commands in the top-level directory:
#      python -m build
#    Ensure that you are on the clean and up-to-date main branch (git status --untracked-files=no should not list any
#    files and show the main branch)
# 6. Upload the package to the pypi test server first:
#      twine upload dist/* -r pypitest
# 7. Check that you can install it in a virtualenv by running:
#      pip install -i https://testpypi.python.org/pypi --extra-index-url https://pypi.org/simple peft
# 8. Upload the final version to actual pypi:
#      twine upload dist/* -r pypi
# 9. Add release notes to the tag on https://github.com/huggingface/peft/releases once everything is looking hunky-dory.
#      Check the notes here: https://docs.google.com/document/d/1k-sOIfykuKjWcOIALqjhFKz4amFEp-myeJUJEzNgjoU/edit?usp=sharing
# 10. Update the version in __init__.py, pyproject.toml to the bumped patch version + ".dev0" (e.g. from "0.7.0" to "0.7.1.dev0")

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "peft"
version = "0.18.2.dev0"
description = "Parameter-Efficient Fine-Tuning (PEFT)"
readme = {file = "README.md", content-type = "text/markdown"}
license = {file = "LICENSE"}
authors = [
    {name = "The HuggingFace team", email = "benjamin@huggingface.co"},
]
keywords = ["deep learning"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = "==3.10.*" # Changed this for Neuron wheels compatibility.

dependencies = [
    "numpy>=1.17",
    "packaging>=20.0",
    "psutil",
    "pyyaml",
    "torch>=1.13.0",
    "transformers",
    "tqdm",
    "accelerate>=0.21.0",
    "safetensors",
    "huggingface_hub>=0.25.0",
]

[project.optional-dependencies]
quality = [
    "black",  # doc-builder has an implicit dependency on Black, see huggingface/doc-builder#434
    "hf-doc-builder",
    "ruff~=0.12.8",
]
docs_specific = [
    "black",  # doc-builder has an implicit dependency on Black, see huggingface/doc-builder#434
    "requests",  # doc-builder has an implicit dependency on requests
    "hf-doc-builder",
]
dev = ["peft[quality,docs_specific]"]
test = [
    "peft[dev]",
    "pytest",
    "pytest-cov",
    "pytest-xdist",
    "parameterized",
    "datasets",
    "diffusers",
    "scipy",
    "protobuf",
    "sentencepiece",
]

[project.urls]
Homepage = "https://github.com/huggingface/peft"

[tool.uv.sources]
transformers = { path = "../transformers", editable = true }
accelerate = { path = "../accelerate", editable = true }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
peft = [
    "py.typed",
    "tuners/boft/fbd/fbd_cuda.cpp",
    "tuners/boft/fbd/fbd_cuda_kernel.cu",
]

[tool.black]
# Only used by `hf-doc-builder´.
line-length = 119
target-version = ['py310']

[tool.ruff]
target-version = "py310"
line-length = 119
extend-exclude = ["*.ipynb"]

[tool.ruff.lint]
preview = true
explicit-preview-rules = true
extend-select = [
    "C", # Complexity
    "E", # PEP8 errors
    "F", # PEP8 formatting
    "I", # Import sorting
    "UP", # Pyupgrade upgrades
    "W", # PEP8 warnings
    "PT009", # Pytest assertions
    "RUF022", # Sorting of __all__
]
ignore = [
    "C901", # Function too complex
    "E501", # Line length (handled by ruff-format)
    "F841", # unused variable
    "UP007", # X | Y style Unions
    "C420", # dict.fromkeys
    "UP045", # don't force replacing Optional[X] with X | None
]

[tool.ruff.lint.isort]
lines-after-imports = 2
known-first-party = ["peft"]

[tool.pytest]
doctest_optionflags = [
    "NORMALIZE_WHITESPACE",
    "ELLIPSIS",
    "NUMBER",
]

addopts = ["--cov=src/peft", "--cov-report=term-missing", "--durations=10"]

markers = [
    "single_gpu_tests: tests that run on a single GPU",
    "multi_gpu_tests: tests that run on multiple GPUs",
    "regression: whether to run regression suite test",
    "bitsandbytes: select bitsandbytes integration tests",
]

filterwarnings = [
    "error::DeprecationWarning:transformers",
    # in sync with tests/conftest.py regarding BPE deprecation
    "ignore:.*BPE.__init__ will not create from files anymore.*:DeprecationWarning:transformers",
    "error::FutureWarning:transformers",
]
